--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: Arial;
+  font-family: "Inter", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -114,7 +114,7 @@
   background-position: center;
   background-size: cover;
   padding: 100px 80px 215px;
-  color:white;
+  color: white;
 }
 
 .recipes__title {
@@ -162,6 +162,5 @@
 }
 
 .recipes__video-caption {
-  margin:0;
-
+  margin: 0;
 }
