--- a/pages/index.css
+++ b/pages/index.css
@@ -164,3 +164,82 @@
 .recipes__video-caption {
   margin: 0;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 100px 0 120px;
+}
+
+.reservation__title {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  text-align: center;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+.form {
+  max-width: 385px;
+  margin-top: 80px;
+}
+
+.form__fieldset {
+  box-sizing: border-box;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form__label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 4px;
+  height: 60px;
+  padding: 15px 20px;
+  border: 1px solid #838383;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__button {
+  background-color: #2f80ed;
+  height: 60px;
+  max-width: 385px;
+  border-radius: 4px;
+  border: none;
+  margin-bottom: 32px;
+  width: 100%;
+  color: white;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+}
+
+.form__label_type_checkbox {
+  flex-direction: row;
+  justify-content: center;
+}
