--- a/pages/index.css
+++ b/pages/index.css
@@ -171,7 +171,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 100px 0 120px;
+  padding: 0 0 120px;
 }
 
 .reservation__title {
@@ -181,6 +181,7 @@
   font-size: 44px;
   line-height: 52px;
   text-align: center;
+  margin: 100px auto 80px;
 }
 
 .reservation__form {
@@ -189,7 +190,6 @@
 
 .form {
   max-width: 385px;
-  margin-top: 80px;
 }
 
 .form__fieldset {
