--- a/pages/index.css
+++ b/pages/index.css
@@ -171,7 +171,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 0 0 120px;
+  padding: 100px 0 120px;
 }
 
 .reservation__title {
@@ -181,8 +181,7 @@
   font-size: 44px;
   line-height: 52px;
   text-align: center;
-  margin: 100px auto 80px;
-  margin-top: 100px;
+  margin: 0 auto 80px;
 }
 
 .reservation__form {
