--- a/pages/index.css
+++ b/pages/index.css
@@ -1,245 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  position: relative;
-  box-sizing: border-box;
-  background: url(../images/background_header.svg) no-repeat center/cover;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  height: 39px;
-  width: 105px;
-  position: relative;
-  left: -50px;
-}
-
-.nav__links {
-  display: flex;
-  column-gap: 20px;
-  list-style-type: none;
-  padding: 0;
-  margin: 8px 0 0;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.header__content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__title {
-  max-width: 635px;
-  font-size: 62px;
-  line-height: 76px;
-  font-weight: 500;
-  margin-top: 128px;
-  margin-bottom: 0;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  max-width: 515px;
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 32px;
-  margin-bottom: 0;
-}
-
-.header__image {
-  position: absolute;
-  right: 5px;
-  top: 124px;
-  max-width: 636px;
-}
-
-.header__footer {
-  margin-top: auto;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  box-sizing: border-box;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.header__link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.header__address {
-  margin: 0;
-  color: #838383;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 80px 215px;
-  color: white;
-}
-
-.recipes__title {
-  max-width: 580px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin-top: 24px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  list-style-type: none;
-  padding: 0;
-  margin: 80px 0 0;
-  display: flex;
-  justify-content: center;
-  column-gap: 40px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: none;
-}
-
-.recipes__video-captions {
-  margin: 24px 0 0;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.recipes__video-caption {
-  margin: 0;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-  margin: 0 auto 80px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  box-sizing: border-box;
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.form__label {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-bottom: 32px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  box-sizing: border-box;
-  width: 100%;
-  border-radius: 4px;
-  height: 60px;
-  padding: 15px 20px;
-  border: 1px solid #838383;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__button {
-  background-color: #2f80ed;
-  height: 60px;
-  max-width: 385px;
-  border-radius: 4px;
-  border: none;
-  margin-bottom: 32px;
-  width: 100%;
-  color: white;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-}
-
-.form__label_type_checkbox {
-  flex-direction: row;
-  justify-content: center;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/nav/nav.css);
+@import url(../blocks/recipes/recipes.css);
+@import url(../blocks/reservation/reservation.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/footer/footer.css);
