--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,7 +7,7 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
-  background: url(../../images/background_header.svg) no-repeat center/cover;
+  background: url(../images/background_header.svg) no-repeat center/cover;
 }
 
 .header__content {
