--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/nav/nav.css);
-@import url(../blocks/recipes/recipes.css);
-@import url(../blocks/reservation/reservation.css);
-@import url(../blocks/form/form.css);
-@import url(../blocks/footer/footer.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/footer.css);
